@@ -41,6 +41,7 @@ examples/fixture_create_and_print_snak_wd_instance_of_human.pl
 examples/fixture_create_and_print_snak_wd_instance_of_version_edition_or_translation.pl
 examples/fixture_create_and_print_snak_wd_instance_of_wikidata_entity.pl
 examples/fixture_create_and_print_snak_wd_item_for_this_sense_dog.pl
+examples/fixture_create_and_print_snak_wd_of_poem.pl
 examples/fixture_create_and_print_value_item_wd_dog.pl
 examples/fixture_create_and_print_value_item_wd_douglas.pl
 examples/fixture_create_and_print_value_item_wd_douglasadams.pl
